<resources>
    <string name="app_name">PepperProfesor</string>
    <string name="title">title</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="fondo">fondo</string>
    <string name="pregunta">pregunta</string>
    <string name="enunciado">enunciado</string>
    <string name="enunciado3">enunciado3</string>
    <string name="score3">score3</string>
    <string name="incorrecto">incorrecto</string>
    <string name="logo">logo</string>
      <string name="score">score</string>
    <string name="titlecorrecto">CORRECTO</string>
    <string name="titleincorrecto">INCORRECTO</string>
    <string name="brespuesta">brespuesta</string>
    <string name="respuestaa2">respuestaA2</string>
    <string name="respuestaa3">respuestaA2</string>
    <string name="respuestab2">respuestaB2</string>
    <string name="respuestab3">respuestaA2</string>
    <string name="respuestac3">respuestaC3</string>
    <string name="respuestac2">respuestaA2</string>
    <string name="imagenpregunta">imagenPregunta</string>
    <string name="nota">Nota</string>
</resources>